// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/drafts/panel/panel_body should have called handleFormattedTextClick 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <PanelBody
    channelId="channel_id"
    displayName="display_name"
    fileInfos={Array []}
    message="message"
    status="status"
    uploadsInProgress={Array []}
    userId="user_id"
    username="username"
  >
    <div
      className="DraftPanelBody post"
    >
      <div
        className="DraftPanelBody__left post__img"
      >
        <ProfilePicture
          channelId="channel_id"
          size="md"
          src="/api/v4/users/user_id/image?_=0"
          status="status"
          userId="user_id"
          username="username"
        >
          <ProfilePopoverController
            channelId="channel_id"
            src="/api/v4/users/user_id/image?_=0"
            triggerComponentClass="status-wrapper"
            userId="user_id"
          >
            <span
              aria-expanded="false"
              aria-haspopup="dialog"
              className="status-wrapper"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onPointerDown={[Function]}
            >
              <RoundButton
                className="style--none"
                size="md"
              >
                <button
                  className="RoundButton-dvlhqG gfRzmz style--none"
                  size="md"
                >
                  <span
                    className="profile-icon "
                  >
                    <Memo(Avatar)
                      size="md"
                      url="/api/v4/users/user_id/image?_=0"
                      username="username"
                    >
                      <img
                        alt="username profile image"
                        className="Avatar Avatar-md"
                        loading="lazy"
                        onError={[Function]}
                        src="/api/v4/users/user_id/image?_=0"
                      />
                    </Memo(Avatar)>
                  </span>
                </button>
              </RoundButton>
              <Memo(StatusIcon)
                status="status"
              >
                <StatusOfflineIcon
                  className="status "
                >
                  <span
                    className="status "
                  >
                    <svg
                      aria-label="Offline Icon"
                      className="offline--icon"
                      height="100%"
                      role="img"
                      style={
                        Object {
                          "clipRule": "evenodd",
                          "fillRule": "evenodd",
                          "strokeLinejoin": "round",
                          "strokeMiterlimit": 1.41421,
                        }
                      }
                      viewBox="0 0 20 20"
                      width="100%"
                    >
                      <path
                        d="M10,0c5.519,0 10,4.481 10,10c0,5.519 -4.481,10 -10,10c-5.519,0 -10,-4.481 -10,-10c0,-5.519 4.481,-10 10,-10Zm0,2c4.415,0 8,3.585 8,8c0,4.415 -3.585,8 -8,8c-4.415,0 -8,-3.585 -8,-8c0,-4.415 3.585,-8 8,-8Z"
                      />
                    </svg>
                  </span>
                </StatusOfflineIcon>
              </Memo(StatusIcon)>
            </span>
          </ProfilePopoverController>
        </ProfilePicture>
      </div>
      <div
        className="post__content"
        onClick={[Function]}
      >
        <div
          className="DraftPanelBody__right"
        >
          <div
            className="post__header"
          >
            <strong>
              display_name
            </strong>
          </div>
          <div
            className="post__body"
          >
            <Connect(Markdown)
              message="message"
              options={
                Object {
                  "disableGroupHighlight": true,
                  "mentionHighlight": false,
                }
              }
            >
              <Markdown
                autolinkedUrlSchemes={
                  Array [
                    "http",
                    "https",
                    "ftp",
                    "mailto",
                    "tel",
                    "mattermost",
                  ]
                }
                channelNamesMap={Object {}}
                dispatch={[Function]}
                emojiMap={
                  EmojiMap {
                    "customEmojis": Map {},
                    "customEmojisArray": Array [],
                  }
                }
                enableFormatting={true}
                hasImageProxy={false}
                managedResourcePaths={Array []}
                mentionKeys={Array []}
                message="message"
                minimumHashtagLength={NaN}
                options={
                  Object {
                    "disableGroupHighlight": true,
                    "mentionHighlight": false,
                  }
                }
                siteURL="http://localhost:8065"
                team={
                  Object {
                    "display_name": "Team ID",
                    "id": "team_id",
                    "name": "team-id",
                  }
                }
              >
                <p
                  key="0"
                >
                  message
                </p>
              </Markdown>
            </Connect(Markdown)>
          </div>
        </div>
      </div>
    </div>
  </PanelBody>
</Provider>
`;

exports[`components/drafts/panel/panel_body should match snapshot 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <PanelBody
    channelId="channel_id"
    displayName="display_name"
    fileInfos={Array []}
    message="message"
    status="status"
    uploadsInProgress={Array []}
    userId="user_id"
    username="username"
  >
    <div
      className="DraftPanelBody post"
    >
      <div
        className="DraftPanelBody__left post__img"
      >
        <ProfilePicture
          channelId="channel_id"
          size="md"
          src="/api/v4/users/user_id/image?_=0"
          status="status"
          userId="user_id"
          username="username"
        >
          <ProfilePopoverController
            channelId="channel_id"
            src="/api/v4/users/user_id/image?_=0"
            triggerComponentClass="status-wrapper"
            userId="user_id"
          >
            <span
              aria-expanded="false"
              aria-haspopup="dialog"
              className="status-wrapper"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onPointerDown={[Function]}
            >
              <RoundButton
                className="style--none"
                size="md"
              >
                <button
                  className="RoundButton-dvlhqG gfRzmz style--none"
                  size="md"
                >
                  <span
                    className="profile-icon "
                  >
                    <Memo(Avatar)
                      size="md"
                      url="/api/v4/users/user_id/image?_=0"
                      username="username"
                    >
                      <img
                        alt="username profile image"
                        className="Avatar Avatar-md"
                        loading="lazy"
                        onError={[Function]}
                        src="/api/v4/users/user_id/image?_=0"
                      />
                    </Memo(Avatar)>
                  </span>
                </button>
              </RoundButton>
              <Memo(StatusIcon)
                status="status"
              >
                <StatusOfflineIcon
                  className="status "
                >
                  <span
                    className="status "
                  >
                    <svg
                      aria-label="Offline Icon"
                      className="offline--icon"
                      height="100%"
                      role="img"
                      style={
                        Object {
                          "clipRule": "evenodd",
                          "fillRule": "evenodd",
                          "strokeLinejoin": "round",
                          "strokeMiterlimit": 1.41421,
                        }
                      }
                      viewBox="0 0 20 20"
                      width="100%"
                    >
                      <path
                        d="M10,0c5.519,0 10,4.481 10,10c0,5.519 -4.481,10 -10,10c-5.519,0 -10,-4.481 -10,-10c0,-5.519 4.481,-10 10,-10Zm0,2c4.415,0 8,3.585 8,8c0,4.415 -3.585,8 -8,8c-4.415,0 -8,-3.585 -8,-8c0,-4.415 3.585,-8 8,-8Z"
                      />
                    </svg>
                  </span>
                </StatusOfflineIcon>
              </Memo(StatusIcon)>
            </span>
          </ProfilePopoverController>
        </ProfilePicture>
      </div>
      <div
        className="post__content"
        onClick={[Function]}
      >
        <div
          className="DraftPanelBody__right"
        >
          <div
            className="post__header"
          >
            <strong>
              display_name
            </strong>
          </div>
          <div
            className="post__body"
          >
            <Connect(Markdown)
              message="message"
              options={
                Object {
                  "disableGroupHighlight": true,
                  "mentionHighlight": false,
                }
              }
            >
              <Markdown
                autolinkedUrlSchemes={
                  Array [
                    "http",
                    "https",
                    "ftp",
                    "mailto",
                    "tel",
                    "mattermost",
                  ]
                }
                channelNamesMap={Object {}}
                dispatch={[Function]}
                emojiMap={
                  EmojiMap {
                    "customEmojis": Map {},
                    "customEmojisArray": Array [],
                  }
                }
                enableFormatting={true}
                hasImageProxy={false}
                managedResourcePaths={Array []}
                mentionKeys={Array []}
                message="message"
                minimumHashtagLength={NaN}
                options={
                  Object {
                    "disableGroupHighlight": true,
                    "mentionHighlight": false,
                  }
                }
                siteURL="http://localhost:8065"
                team={
                  Object {
                    "display_name": "Team ID",
                    "id": "team_id",
                    "name": "team-id",
                  }
                }
              >
                <p
                  key="0"
                >
                  message
                </p>
              </Markdown>
            </Connect(Markdown)>
          </div>
        </div>
      </div>
    </div>
  </PanelBody>
</Provider>
`;

exports[`components/drafts/panel/panel_body should match snapshot for priority 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <PanelBody
    channelId="channel_id"
    displayName="display_name"
    fileInfos={Array []}
    message="message"
    priority={
      Object {
        "priority": "important",
        "requested_ack": false,
      }
    }
    status="status"
    uploadsInProgress={Array []}
    userId="user_id"
    username="username"
  >
    <div
      className="DraftPanelBody post"
    >
      <div
        className="DraftPanelBody__left post__img"
      >
        <ProfilePicture
          channelId="channel_id"
          size="md"
          src="/api/v4/users/user_id/image?_=0"
          status="status"
          userId="user_id"
          username="username"
        >
          <ProfilePopoverController
            channelId="channel_id"
            src="/api/v4/users/user_id/image?_=0"
            triggerComponentClass="status-wrapper"
            userId="user_id"
          >
            <span
              aria-expanded="false"
              aria-haspopup="dialog"
              className="status-wrapper"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onPointerDown={[Function]}
            >
              <RoundButton
                className="style--none"
                size="md"
              >
                <button
                  className="RoundButton-dvlhqG gfRzmz style--none"
                  size="md"
                >
                  <span
                    className="profile-icon "
                  >
                    <Memo(Avatar)
                      size="md"
                      url="/api/v4/users/user_id/image?_=0"
                      username="username"
                    >
                      <img
                        alt="username profile image"
                        className="Avatar Avatar-md"
                        loading="lazy"
                        onError={[Function]}
                        src="/api/v4/users/user_id/image?_=0"
                      />
                    </Memo(Avatar)>
                  </span>
                </button>
              </RoundButton>
              <Memo(StatusIcon)
                status="status"
              >
                <StatusOfflineIcon
                  className="status "
                >
                  <span
                    className="status "
                  >
                    <svg
                      aria-label="Offline Icon"
                      className="offline--icon"
                      height="100%"
                      role="img"
                      style={
                        Object {
                          "clipRule": "evenodd",
                          "fillRule": "evenodd",
                          "strokeLinejoin": "round",
                          "strokeMiterlimit": 1.41421,
                        }
                      }
                      viewBox="0 0 20 20"
                      width="100%"
                    >
                      <path
                        d="M10,0c5.519,0 10,4.481 10,10c0,5.519 -4.481,10 -10,10c-5.519,0 -10,-4.481 -10,-10c0,-5.519 4.481,-10 10,-10Zm0,2c4.415,0 8,3.585 8,8c0,4.415 -3.585,8 -8,8c-4.415,0 -8,-3.585 -8,-8c0,-4.415 3.585,-8 8,-8Z"
                      />
                    </svg>
                  </span>
                </StatusOfflineIcon>
              </Memo(StatusIcon)>
            </span>
          </ProfilePopoverController>
        </ProfilePicture>
      </div>
      <div
        className="post__content"
        onClick={[Function]}
      >
        <div
          className="DraftPanelBody__right"
        >
          <div
            className="post__header"
          >
            <strong>
              display_name
            </strong>
            <Memo(PriorityLabels)
              canRemove={false}
              hasError={false}
              padding="0 0 0 8px"
              priority="important"
              requestedAck={false}
            >
              <Priority
                padding="0 0 0 8px"
              >
                <div
                  className="Priority-unHRQ dkJcdD"
                >
                  <PriorityLabel
                    priority="important"
                    size="xs"
                  >
                    <Memo(Tag)
                      icon="alert-circle-outline"
                      size="xs"
                      text="Important"
                      uppercase={true}
                      variant="info"
                    >
                      <TagWrapper
                        as="div"
                        className="Tag Tag--info Tag--xs"
                        uppercase={true}
                      >
                        <div
                          className="TagWrapper-keYggn hpsCJu Tag Tag--info Tag--xs"
                        >
                          <AlertCircleOutlineIcon
                            size={10}
                          >
                            <svg
                              fill="currentColor"
                              height={10}
                              version="1.1"
                              viewBox="0 0 24 24"
                              width={10}
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2 M12,20c-4.4,0-8-3.6-8-8s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z M12.501,13h-1l-0.5-6h2L12.501,13z M13,16c0,0.552-0.448,1-1,1s-1-0.448-1-1s0.448-1,1-1S13,15.448,13,16z"
                              />
                            </svg>
                          </AlertCircleOutlineIcon>
                          <TagText>
                            <span
                              className="TagText-bWgUzx kzWPbz"
                            >
                              Important
                            </span>
                          </TagText>
                        </div>
                      </TagWrapper>
                    </Memo(Tag)>
                  </PriorityLabel>
                </div>
              </Priority>
            </Memo(PriorityLabels)>
          </div>
          <div
            className="post__body"
          >
            <Connect(Markdown)
              message="message"
              options={
                Object {
                  "disableGroupHighlight": true,
                  "mentionHighlight": false,
                }
              }
            >
              <Markdown
                autolinkedUrlSchemes={
                  Array [
                    "http",
                    "https",
                    "ftp",
                    "mailto",
                    "tel",
                    "mattermost",
                  ]
                }
                channelNamesMap={Object {}}
                dispatch={[Function]}
                emojiMap={
                  EmojiMap {
                    "customEmojis": Map {},
                    "customEmojisArray": Array [],
                  }
                }
                enableFormatting={true}
                hasImageProxy={false}
                managedResourcePaths={Array []}
                mentionKeys={Array []}
                message="message"
                minimumHashtagLength={NaN}
                options={
                  Object {
                    "disableGroupHighlight": true,
                    "mentionHighlight": false,
                  }
                }
                siteURL="http://localhost:8065"
                team={
                  Object {
                    "display_name": "Team ID",
                    "id": "team_id",
                    "name": "team-id",
                  }
                }
              >
                <p
                  key="0"
                >
                  message
                </p>
              </Markdown>
            </Connect(Markdown)>
          </div>
        </div>
      </div>
    </div>
  </PanelBody>
</Provider>
`;

exports[`components/drafts/panel/panel_body should match snapshot for requested_ack 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <PanelBody
    channelId="channel_id"
    displayName="display_name"
    fileInfos={Array []}
    message="message"
    priority={
      Object {
        "priority": "",
        "requested_ack": true,
      }
    }
    status="status"
    uploadsInProgress={Array []}
    userId="user_id"
    username="username"
  >
    <div
      className="DraftPanelBody post"
    >
      <div
        className="DraftPanelBody__left post__img"
      >
        <ProfilePicture
          channelId="channel_id"
          size="md"
          src="/api/v4/users/user_id/image?_=0"
          status="status"
          userId="user_id"
          username="username"
        >
          <ProfilePopoverController
            channelId="channel_id"
            src="/api/v4/users/user_id/image?_=0"
            triggerComponentClass="status-wrapper"
            userId="user_id"
          >
            <span
              aria-expanded="false"
              aria-haspopup="dialog"
              className="status-wrapper"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onPointerDown={[Function]}
            >
              <RoundButton
                className="style--none"
                size="md"
              >
                <button
                  className="RoundButton-dvlhqG gfRzmz style--none"
                  size="md"
                >
                  <span
                    className="profile-icon "
                  >
                    <Memo(Avatar)
                      size="md"
                      url="/api/v4/users/user_id/image?_=0"
                      username="username"
                    >
                      <img
                        alt="username profile image"
                        className="Avatar Avatar-md"
                        loading="lazy"
                        onError={[Function]}
                        src="/api/v4/users/user_id/image?_=0"
                      />
                    </Memo(Avatar)>
                  </span>
                </button>
              </RoundButton>
              <Memo(StatusIcon)
                status="status"
              >
                <StatusOfflineIcon
                  className="status "
                >
                  <span
                    className="status "
                  >
                    <svg
                      aria-label="Offline Icon"
                      className="offline--icon"
                      height="100%"
                      role="img"
                      style={
                        Object {
                          "clipRule": "evenodd",
                          "fillRule": "evenodd",
                          "strokeLinejoin": "round",
                          "strokeMiterlimit": 1.41421,
                        }
                      }
                      viewBox="0 0 20 20"
                      width="100%"
                    >
                      <path
                        d="M10,0c5.519,0 10,4.481 10,10c0,5.519 -4.481,10 -10,10c-5.519,0 -10,-4.481 -10,-10c0,-5.519 4.481,-10 10,-10Zm0,2c4.415,0 8,3.585 8,8c0,4.415 -3.585,8 -8,8c-4.415,0 -8,-3.585 -8,-8c0,-4.415 3.585,-8 8,-8Z"
                      />
                    </svg>
                  </span>
                </StatusOfflineIcon>
              </Memo(StatusIcon)>
            </span>
          </ProfilePopoverController>
        </ProfilePicture>
      </div>
      <div
        className="post__content"
        onClick={[Function]}
      >
        <div
          className="DraftPanelBody__right"
        >
          <div
            className="post__header"
          >
            <strong>
              display_name
            </strong>
            <Memo(PriorityLabels)
              canRemove={false}
              hasError={false}
              padding="0 0 0 8px"
              priority=""
              requestedAck={true}
            >
              <Priority
                padding="0 0 0 8px"
              >
                <div
                  className="Priority-unHRQ dkJcdD"
                >
                  <Acknowledgements
                    hasError={false}
                  >
                    <div
                      className="Acknowledgements-kPkVCv dNydui"
                    >
                      <WithTooltip
                        id="post-priority-picker-ack-tooltip"
                        placement="top"
                        title="Acknowledgement will be requested"
                      >
                        <OverlayTrigger
                          defaultOverlayShown={false}
                          delay={400}
                          overlay={<Unknown />}
                          placement="top"
                          trigger={
                            Array [
                              "hover",
                              "focus",
                            ]
                          }
                        >
                          <OverlayTrigger
                            defaultOverlayShown={false}
                            delay={400}
                            overlay={
                              <OverlayWrapper
                                intl={
                                  Object {
                                    "$t": [Function],
                                    "defaultFormats": Object {},
                                    "defaultLocale": "en",
                                    "defaultRichTextElements": undefined,
                                    "fallbackOnEmptyString": true,
                                    "formatDate": [Function],
                                    "formatDateTimeRange": [Function],
                                    "formatDateToParts": [Function],
                                    "formatDisplayName": [Function],
                                    "formatList": [Function],
                                    "formatListToParts": [Function],
                                    "formatMessage": [Function],
                                    "formatNumber": [Function],
                                    "formatNumberToParts": [Function],
                                    "formatPlural": [Function],
                                    "formatRelativeTime": [Function],
                                    "formatTime": [Function],
                                    "formatTimeToParts": [Function],
                                    "formats": Object {},
                                    "formatters": Object {
                                      "getDateTimeFormat": [Function],
                                      "getDisplayNames": [Function],
                                      "getListFormat": [Function],
                                      "getMessageFormat": [Function],
                                      "getNumberFormat": [Function],
                                      "getPluralRules": [Function],
                                      "getRelativeTimeFormat": [Function],
                                    },
                                    "locale": "en",
                                    "messages": Object {},
                                    "onError": [Function],
                                    "onWarn": [Function],
                                    "textComponent": "span",
                                    "timeZone": "Etc/UTC",
                                    "wrapRichTextChunksInFragment": undefined,
                                  }
                                }
                              />
                            }
                            placement="top"
                            trigger={
                              Array [
                                "hover",
                                "focus",
                              ]
                            }
                          >
                            <CheckCircleOutlineIcon
                              onBlur={[Function]}
                              onClick={null}
                              onFocus={[Function]}
                              onMouseOut={[Function]}
                              onMouseOver={[Function]}
                              size={14}
                            >
                              <svg
                                fill="currentColor"
                                height={14}
                                onBlur={[Function]}
                                onClick={null}
                                onFocus={[Function]}
                                onMouseOut={[Function]}
                                onMouseOver={[Function]}
                                version="1.1"
                                viewBox="0 0 24 24"
                                width={14}
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M12 20C7.59 20 4 16.41 4 12S7.59 4 12 4 20 7.59 20 12 16.41 20 12 20M16.59 7.58L10 14.17L7.41 11.59L6 13L10 17L18 9L16.59 7.58Z"
                                />
                              </svg>
                            </CheckCircleOutlineIcon>
                          </OverlayTrigger>
                        </OverlayTrigger>
                      </WithTooltip>
                      <FormattedMessage
                        defaultMessage="Request acknowledgement"
                        id="post_priority.request_acknowledgement"
                      >
                        <span>
                          Request acknowledgement
                        </span>
                      </FormattedMessage>
                    </div>
                  </Acknowledgements>
                </div>
              </Priority>
            </Memo(PriorityLabels)>
          </div>
          <div
            className="post__body"
          >
            <Connect(Markdown)
              message="message"
              options={
                Object {
                  "disableGroupHighlight": true,
                  "mentionHighlight": false,
                }
              }
            >
              <Markdown
                autolinkedUrlSchemes={
                  Array [
                    "http",
                    "https",
                    "ftp",
                    "mailto",
                    "tel",
                    "mattermost",
                  ]
                }
                channelNamesMap={Object {}}
                dispatch={[Function]}
                emojiMap={
                  EmojiMap {
                    "customEmojis": Map {},
                    "customEmojisArray": Array [],
                  }
                }
                enableFormatting={true}
                hasImageProxy={false}
                managedResourcePaths={Array []}
                mentionKeys={Array []}
                message="message"
                minimumHashtagLength={NaN}
                options={
                  Object {
                    "disableGroupHighlight": true,
                    "mentionHighlight": false,
                  }
                }
                siteURL="http://localhost:8065"
                team={
                  Object {
                    "display_name": "Team ID",
                    "id": "team_id",
                    "name": "team-id",
                  }
                }
              >
                <p
                  key="0"
                >
                  message
                </p>
              </Markdown>
            </Connect(Markdown)>
          </div>
        </div>
      </div>
    </div>
  </PanelBody>
</Provider>
`;
